<resources>
    <string name="app_name">SkegoApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_task">Task</string>
    <string name="title_calendar">Calendar</string>
    <string name="input_title_task">Title Task</string>
    <string name="input_add_due_date">Add Due Date</string>
    <string name="input_add_difficulty">Add Difficulty</string>
    <string name="input_add_category">Add Category</string>
    <string name="input_add_duration">Add Duration</string>
    <string name="input_add_detail">Add Detail</string>
    <string name="arrow_icon">Arrow Icon</string>
    <string name="reset_password_icon">Password Icon</string>
    <string name="about_icon">About Icon</string>
    <string name="edit_task">Edit Icon</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="user">User</string>
    <string name="hello">Hello,</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="about"><![CDATA[SKEGO is a smart task management app designed to help students organize and prioritize their tasks efficiently. It considers important factors like deadlines, task difficulty, and estimated duration to determine which tasks should be prioritized.]]></string>
    <string name="splash">splash</string>
    <string name="fab_routine">fab routine</string>
    <string name="clock_icon">clock icon</string>
    <string name="location_icon">location icon</string>
    <string name="icon_edit">icon edit</string>
    <string name="back_button">Back Button</string>
    <string name="routine_title">Routine Title</string>
    <string name="add_date">Add Date</string>
    <string name="add_time">Add Time</string>
    <string name="routine_kategori">Routine Kategori</string>
    <string name="add_location">Add Location</string>
    <string name="add_detail">Add Detail</string>
    <string name="save">Save</string>
    <string name="date">26 November 2024</string>
    <string name="category">HEALTH</string>
    <string name="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</string>
    <string name="diff">HIGH</string>
    <string name="category_task">LOW</string>
    <string name="reset_password">Reset Password</string>
    <string name="welcome">Welcome Nice to meet you Skeby~</string>
    <string name="email">Email</string>
    <string name="old_password">Old Password</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="_title">About</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="hi_skeby">Hi Skeby!</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_one">Don\'t Have Account? Create one!</string>
    <string name="welcome_to">Welcome to</string>
    <string name="skego">Skego</string>
    <string name="organize">Organize your schedule with us for more effectiveness and efficiency.</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_login">Already Have Account? Log In!</string>
    <string name="next_month">Next Month</string>
    <string name="month_year">Month Year</string>
    <string name="previous_month">Previous Month</string>
    <string name="current_date">Current Date</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="routine">Routine</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="generate">Generate</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="your_task">Your Task</string>
    <string name="mon">Mon</string>
    <string name="_01">01</string>
    <string name="london_uk">London, UK</string>
    <string name="desc_2">A sales presentation with a potential client. The meeting is set to take place in London, and the a...</string>
    <string name="time_time">11:30 AM - 12:30 PM</string>
    <string name="create_database">Create Database</string>
    <string name="due_26_nov">Due 26 Nov</string>
    <string name="rocket_icon">Rocket Icon</string>
    <string name="what_would">What would you like to do next? 🚀</string>
    <string name="add_a_new_task">Add a New Task</string>
    <string name="create_a_routine">Create a Routine</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string-array name="status_array">
        <item>Not Started</item>
        <item>On Progress</item>
        <item>Finish</item>
    </string-array>

    <string-array name="category_array">
        <item>WORK</item>
        <item>SCHOOL</item>
        <item>PERSONAL</item>
    </string-array>

    <string-array name="difficulty_array">
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>

    <string-array name="duration_array">
        <item>Kurang dari 1 Jam</item>
        <item>1-3 Jam</item>
        <item>4-6 Jam</item>
        <item>Lebih dari 6 Jam</item>
    </string-array>


</resources>